# Multi-Agent-Manufacturing-System

./: README.md  agents_crew.py  agents_nocrew.py  example.env  pyproject.toml  requirements.txt  scraper.py
static/: index.html
